[project]
name = "guard-relay"
version = "1.1.0"
description = ""
authors = [
    {name = "Johann Tiderko",email = "johann@tiderko.de"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "esphome>=2024.12.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
